2011-08-29  Eric Wasylishen  <ewasylishen@gmail.com>

	* Image-test/Image-test.m: Test using lockFocus and drawing an image
	into an image

2011-08-16  Eric Wasylishen  <ewasylishen@gmail.com>

	* Image-test/Image-test.m: Test the edges of an image remain sharp when
	it's scaled up a lot (20x).

2011-08-15  Eric Wasylishen  <ewasylishen@gmail.com>

	* Image-test/Image-test.m: Test NSDrawNinePartImage with not enough space
	for drawing all of the parts

2011-08-15  Eric Wasylishen  <ewasylishen@gmail.com>

	* Image-test/Image-test.m: Test NSDrawNinePartImage in a flipped view

2011-08-15  Eric Wasylishen  <ewasylishen@gmail.com>

	* Image-test/Image-test.m: Test NSDrawNinePartImage

2011-08-15  Eric Wasylishen  <ewasylishen@gmail.com>

	* Image-test/Image-test.m: Test NSCustomImageRep, and test that
	drawing it still works even if the rep size is not set.

2011-07-19  Eric Wasylishen  <ewasylishen@gmail.com>

	* Image-test/Image-test.m: Test SVG and PDF drawing.

2011-07-15  Eric Wasylishen  <ewasylishen@gmail.com>

	* Image-test/Image-test.m: Test drawing images with a combination
	of flip, rotation, scale, and translation

2011-07-15  Eric Wasylishen  <ewasylishen@gmail.com>

	* Image-test/Image-test.m: Test drawing images in a a flipped view

2011-07-15  Eric Wasylishen  <ewasylishen@gmail.com>

	* ImageSelection-test:
	* Image-test: Split part of ImageSelection test off in to a new test
	for general testing of image drawing.

2011-07-14  Eric Wasylishen  <ewasylishen@gmail.com>

	* ImageSelection-test/ImageSelection-test.m: Test
	+[NSGraphicsContext graphicsContextWithBitmapImageRep:], which isn't
	working with cairo.

2011-06-27  Eric Wasylishen  <ewasylishen@gmail.com>

	* ImageSelection-test/ImageSelection-test.m: Test that drawing a vector
	rep scales properly.

2011-06-16  Eric Wasylishen  <ewasylishen@gmail.com>

	* ImageSelection-test/ImageSelection-test.m: Also test NSButton's image
	scaling

2011-06-15  Eric Wasylishen  <ewasylishen@gmail.com>
